<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Office Communicator</string>
    <string name="my_location">My location</string>
    <string name="set_presence">Set presence</string>
    <string name="movie_clip">Movie clip</string>
    <string name="settings">Settings</string>   
    
    <string name="business_travel">Business travel</string> 
    <string name="at_extension">At extension</string> 
    <string name="mobile">Mobile</string> 
    <string name="lunch">Lunch</string> 
    <string name="back_at">Back at</string> 
    <string name="out_until">Out until</string> 
    
    <string name="username">Peter Albertsson</string> 
    <string name="demo">Demo 2013: Peter Albertsson</string>
    
    

</resources>